--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "react-dom": "^18.2.0",
         "react-icons": "^5.0.1",
         "react-scripts": "5.0.1",
+        "react-toastify": "^10.0.4",
         "sass": "^1.71.1"
     },
     "devDependencies": {
